--- a/GMM/app/src/main/res/layout/activity_main.xml
+++ b/GMM/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"/>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,13 +22,13 @@
     tools:context="com.example.limjoowon.gmm.MainActivity">
 
     <RelativeLayout
-        android:background="#ff5555"
+        android:background="#ff7777"
         android:layout_width="match_parent"
         android:layout_height="60dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="조모임메신저"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"/>
@@ -29,3 +42,4 @@
         android:gravity="center"
         android:textColor="#000000"></ListView>
 </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
