텍스트 메시지 전송기능만 구현/ 메시지 받으면 무조건 푸시알림 띄우도록 구현

--- a/GMM/app/src/main/res/layout/activity_chat.xml
+++ b/GMM/app/src/main/res/layout/activity_chat.xml
@@ -19,12 +19,12 @@
         android:background="#ddd"
         android:orientation="horizontal">
         <EditText
-            android:id="@+id/edit_text"
+            android:id="@+id/msg_edit_text"
             android:layout_width="0dp"
             android:layout_weight="19"
             android:layout_height="match_parent" />
         <Button
-            android:id="@+id/send_btn"
+            android:id="@+id/msg_send_btn"
             android:layout_width="0dp"
             android:layout_weight="5"
             android:layout_height="match_parent"
