--- a/GMM/app/src/main/res/layout/activity_main.xml
+++ b/GMM/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,25 @@
     <RelativeLayout
         android:background="#ff7777"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="70dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
             android:text="조모임메신저"
+            android:textSize="25sp"
+            android:textStyle="bold"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"/>
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#ff7777"
+            android:textColor="#ffffff"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:text="로그아웃"/>
     </RelativeLayout>
 
     <ListView
