--- a/GMM/app/src/main/res/layout/activity_my_time.xml
+++ b/GMM/app/src/main/res/layout/activity_my_time.xml
@@ -29,7 +29,7 @@
         android:layout_weight="5"
         android:background="#ffffff">
         <GridView
-            android:id="@+id/timetable"
+            android:id="@+id/my_timetable"
             android:background="#000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -49,7 +49,7 @@
         android:layout_weight="1"
         android:background="@color/cast_expanded_controller_progress_text_color">
         <Button
-            android:id="@+id/remove_time_popup"
+            android:id="@+id/my_remove_time_popup"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -60,11 +60,10 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
         <Button
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="개인 시간"
-        android:onClick="personal_time"/>
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="저장"/>
     </LinearLayout>
 </LinearLayout>
