사용자 검색 API와 연동하여 채팅방 만들기 Activity 구현

--- a/GMM/app/src/main/res/layout/activity_create_room.xml
+++ b/GMM/app/src/main/res/layout/activity_create_room.xml
@@ -5,11 +5,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:orientation="horizontal">
         <TextView
-            android:text="채팅방 이름"
-            android:textSize="13dp"
+            android:text="[채팅방 이름]"
+            android:textColor="#111"
+            android:textSize="19dp"
+            android:gravity="center_vertical"
             android:layout_width="0dp"
             android:layout_weight="3"
             android:layout_height="match_parent" />
@@ -17,31 +19,72 @@
             android:layout_width="0dp"
             android:layout_weight="5"
             android:layout_height="match_parent" />
-
     </LinearLayout>
-
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="#000"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
+        android:layout_height="1dp"></LinearLayout>
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:textColor="#111"
+        android:gravity="center_vertical"
+        android:textSize="19dp"
+        android:text = "초대할 사용자"
+        android:layout_marginBottom="5dp"/>
+    
+    <TextView
+        android:visibility="gone"
+        android:gravity="center_vertical"
+        android:textColor="#333"
+        android:textSize="17dp"
+        android:id="@+id/user1"
+        android:layout_width="match_parent"
+        android:layout_height="45dp" />
+    <TextView
+        android:visibility="gone"
+        android:gravity="center_vertical"
+        android:textColor="#333"
+        android:textSize="17dp"
+        android:id="@+id/user2"
+        android:layout_width="match_parent"
+        android:layout_height="45dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
         <EditText
+            android:id="@+id/user_id_edit"
             android:layout_width="0dp"
             android:layout_weight="3"
             android:layout_height="match_parent" />
         <Button
-            android:text="Add User"
-            android:textSize="13dp"
+            android:id="@+id/btn_search_user"
+            android:text="Add"
+            android:textSize="14dp"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent" />
     </LinearLayout>
-    
-    <Button
-        android:layout_width="110dp"
-        android:text="완료"
-        android:layout_gravity="center"
-        android:layout_marginTop="200dp"
-        android:layout_height="50dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/btn_create_room_done"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:text="완료"/>
+    </RelativeLayout>
 
 </LinearLayout>
