--- a/GMM/app/src/main/res/layout/activity_chat.xml
+++ b/GMM/app/src/main/res/layout/activity_chat.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp">
 
-    <!-- 채팅창을 보여주는 ListView -->
-    <ListView
-        android:id="@+id/msg_list"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="58dp"></ListView>
+        android:padding="5dp">
 
-    <!-- 메시지 작성 및 전송 부분 Layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
-        android:background="#ddd"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/msg_edit_text"
-            android:layout_width="0dp"
-            android:layout_weight="19"
-            android:layout_height="match_parent" />
-        <Button
-            android:id="@+id/msg_send_btn"
-            android:layout_width="0dp"
-            android:layout_weight="5"
+        <!-- 채팅창을 보여주는 ListView -->
+        <ListView
+            android:id="@+id/msg_list"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Send"/>
-    </LinearLayout>
-</RelativeLayout>
+            android:layout_marginBottom="58dp"></ListView>
+
+        <!-- 메시지 작성 및 전송 부분 Layout -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_alignParentBottom="true"
+            android:background="#ddd"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/msg_edit_text"
+                android:layout_width="0dp"
+                android:layout_weight="19"
+                android:layout_height="match_parent" />
+            <Button
+                android:id="@+id/msg_send_btn"
+                android:layout_width="0dp"
+                android:layout_weight="5"
+                android:layout_height="match_parent"
+                android:text="Send"/>
+        </LinearLayout>
+    </RelativeLayout>
