--- a/GMM/app/src/main/res/layout/activity_my_time.xml
+++ b/GMM/app/src/main/res/layout/activity_my_time.xml
@@ -60,6 +60,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
         <Button
+            android:id="@+id/save_time_info"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
