--- a/GMM/app/src/main/res/layout/activity_location.xml
+++ b/GMM/app/src/main/res/layout/activity_location.xml
@@ -20,10 +20,34 @@
             android:gravity="center">
         </TextView>
     </LinearLayout>
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:text="전프 모임"
+            android:textColor="#000000"
+            android:layout_alignParentLeft="true"
+            android:gravity="center">
+        </TextView>
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:text="16/11/29"
+            android:textColor="#000000"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            />
+    </RelativeLayout>
     <LinearLayout
         android:orientation="vertical"
         android:paddingBottom="10dp"
-        android:paddingTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_width="match_parent"
@@ -34,13 +58,63 @@
                   android:id="@+id/map"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
-                  android:layout_weight="1"/>
+                  android:layout_weight="3"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:useDefaultMargins="true"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:columnCount="3">
+                <Button
+                    android:id="@+id/set_my_location"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:background="#ff7777"
+                    android:text="내 위치">
+                </Button>
+                <Button
+                    android:id="@+id/dont_know"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:background="#ff7777"
+                    android:text="위치 몰라요">
+                </Button>
+                <Button
+                    android:id="@+id/set_group_location"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:background="#ff7777"
+                    android:text="조모임 위치">
+                </Button>
+                <Button
+                    android:id="@+id/remove_location"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:background="#ff7777"
+                    android:text="취소">
+                </Button>
+                <Button
+                   android:id="@+id/absent"
+                   android:layout_width="120dp"
+                   android:layout_height="50dp"
+                   android:background="#ff7777"
+                   android:text="못가요">
+                </Button>
+                <Button
+                    android:id="@+id/recommend"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:background="#ff7777"
+                    android:text="추천 보기">
+                </Button>
+            </GridLayout>
         </LinearLayout>
     </LinearLayout>
     </LinearLayout>
