--- a/GMM/app/src/main/res/layout/activity_main.xml
+++ b/GMM/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#bbbbbb"
+    android:background="#eeeeee"
     tools:context="com.example.limjoowon.gmm.MainActivity">
 
     <ListView
