--- a/GMM/app/src/main/res/layout/activity_location.xml
+++ b/GMM/app/src/main/res/layout/activity_location.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="120dp"
             android:layout_height="30dp"
-            android:text="16/11/29"
+            android:text="16/12/01"
             android:textColor="#000000"
             android:layout_alignParentRight="true"
             android:gravity="center"
@@ -66,11 +66,11 @@
                     android:text="내 위치">
                 </Button>
                 <Button
-                    android:id="@+id/set_group_location"
+                    android:id="@+id/loc_refresh"
                     android:layout_width="120dp"
                     android:layout_height="50dp"
                     android:background="#ff7777"
-                    android:text="조모임 위치">
+                    android:text="새로고침">
                 </Button>
                 <Button
                     android:id="@+id/recommend"
