--- a/GMM/app/src/main/res/layout/activity_login.xml
+++ b/GMM/app/src/main/res/layout/activity_login.xml
@@ -21,14 +21,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Group Meeting Messenger"
+            android:text="모둠"
             android:gravity="center"
             android:layout_centerInParent="true"
             android:textColor="@android:color/white"
-            android:textSize="36sp" />
+            android:textSize="80sp" />
 
     </RelativeLayout>
-
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -40,7 +39,8 @@
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"/>
 
     </RelativeLayout>
 
