--- a/GMM/app/src/main/res/layout/activity_main.xml
+++ b/GMM/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="15dp"
-        android:layout_marginRight="15dp"/>
+        android:layout_marginRight="15dp"
+        android:src="@android:drawable/ic_menu_add"/>
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
